Sources synchronized with the dovelopment of the build version 3.1.004.007